# Geospatial-Query-System

./: .gitignore  CMakeLists.txt  Readme.md
Backend/: RTrees.cpp  benchmark.cpp  server.cpp
